src/objects/SPE_ConsequenceManagement__c.object
<CustomObject>
    <fields>
        <fullName>AllCategories__c</fullName>
        <label>All Categories</label>
        <picklist>
            <picklistValues>
                <fullName>Facility Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HWS Inbound</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HWS Transportation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HWS Warehousing and VALS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Logistics Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SCM Drop off Point (local)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SCM Inbound</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SCM Last Mile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SCM Outbound</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SCM Value Added Logistics Services ***Cat to be deleted***</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SCM Warehousing (Global)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indirect Software</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT Infra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT Subcontracting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PC &amp; IT Peripheral Devices</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Voice Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Testing and Manufacturing Equipment (TME)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fleet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Travel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not assigned spend (Category)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reported in SPCS (Category)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antennas Ecosystem &amp; Complementary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Basestation Antennas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Building Solutions (IBS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IPT Ecosystem &amp; Complementary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Microwave</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AllProducts__c</fullName>
        <label>All Products</label>
        <picklist>
            <picklistValues>
                <fullName>Charging Gateway CG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charging Gateway CG SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charging@vantage SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Circuit Switched Data Server</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Classroom Training Open Seat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CM SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CMD Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CMS-8200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CMS-8200 DRA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CMS-8200 DRA SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CMS-8200 HSS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CMS-8200 HSS SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CMX5000 SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C-NTDB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C-NTDB HW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C-NTDB SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CoDe Solution Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commissioning of  X</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Common Management SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Common rack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communication Suite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communications Interface Server (CIS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Service Data Manager (CSDM)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Service Data Manager (CSDM) HW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Service Data Manager (CSDM) SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compact DX MSC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compaq</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competence Development Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competence Testing Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comptel InstantLink (Safir) Provisioning Tool</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AlternateRampUpPlan__c</fullName>
        <description>Section - Phase out Plan</description>
        <label>Alternate RampUp Plan</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Alternate_Language__c</fullName>
        <formula>HYPERLINK(&quot;/apex/SPE2_CMAlternateLanguage?id=&quot;&amp;Id,  IMAGE(&quot;/resource/AlternateLanguage&quot;,&quot;Test&quot;,20,120))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Alternate Language</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AnalysisFindings__c</fullName>
        <label>Analysis &amp; Findings</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ApprovalStatus__c</fullName>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Audit_Date__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Audit Date</label>
        <referenceTo>SPE_KPIDefinition__c</referenceTo>
        <relationshipLabel>Consequence Management (Audit Date)</relationshipLabel>
        <relationshipName>Consequence_Management2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Audit_Details__c</fullName>
        <label>Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Audit_Team_Value__c</fullName>
        <label>Audit Team</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Audit_Team__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Audit Team</label>
        <referenceTo>SPE_KPIDefinition__c</referenceTo>
        <relationshipLabel>Consequence Management (Audit Team)</relationshipLabel>
        <relationshipName>Consequence_Management5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Audit_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Audit Type</label>
        <referenceTo>SPE_KPIDefinition__c</referenceTo>
        <relationshipLabel>Consequence Management (Audit Type)</relationshipLabel>
        <relationshipName>Consequence_Management1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Audit_Value1__c</fullName>
        <inlineHelpText>System will display the audit date values based on the matching scopes and suppliers for the period selected.</inlineHelpText>
        <label>Audit Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Audit_Value__c</fullName>
        <inlineHelpText>System will display the audit type based on the matching scopes and suppliers for the period selected.</inlineHelpText>
        <label>Audit Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AutoClose__c</fullName>
        <label>Auto-Close</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AvailableKPIScoreTrends__c</fullName>
        <label>Available KPI Score Trends</label>
        <summaryForeignKey>SPE_CMKPITrend__c.ConsequenceManagement__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>BusinessLine__c</fullName>
        <label>Business Line</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BusinessUnit__c</fullName>
        <label>Business Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_ID__c</fullName>
        <displayFormat>CM-{0000}</displayFormat>
        <label>CM ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>COCountry__c</fullName>
        <label>CO Country</label>
        <picklist>
            <controllingField>COSubRegion__c</controllingField>
            <picklistValues>
                <fullName>Egypt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hongkong</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Macau</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Taiwan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thailand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vietnam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Malaysia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Philippines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Singapore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Zealand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indonesia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South Korea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ukraine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Russian Fed.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denmark</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Estonia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Georgia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Latvia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lithuania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Norway</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sweden</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CORegion__c</fullName>
        <label>CO Region</label>
        <picklist>
            <picklistValues>
                <fullName>All CO Regions</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>NAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INDIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHINA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JAPAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>COSubRegion__c</fullName>
        <label>CO SubRegion</label>
        <picklist>
            <controllingField>CORegion__c</controllingField>
            <picklistValues>
                <fullName>EE-RUB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JAPAN-JP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEE-CE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEE-CH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEE-IB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEE-IM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEE-MED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEE-TCA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WE-GP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WE-N</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WE-NOR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WE-UI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WE-W</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INDIA-IND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LAT-AND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LAT-BR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LAT-MCA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LAT-S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MEA-CEWA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MEA-KSA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MEA-LGIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MEA-NA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MEA-SA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MEA-SKIL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NAM-CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NAM-US</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APAC-ANO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APAC-ANZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APAC-ASO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APAC-IDS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CancelledNTFStatusExplanation__c</fullName>
        <label>Reason for cancellation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CategoryArea__c</fullName>
        <label>Category Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CategoryCluster__c</fullName>
        <label>Category Cluster</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CategoryGroup__c</fullName>
        <label>Category Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CategoryManager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Category Manager</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>contains</operation>
                <value>SPE</value>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>equals</operation>
                <value>System Administrator</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Consequence_Management</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConfidentialKPI__c</fullName>
        <description>Confidential KPIs should not go to supplier</description>
        <formula>KPIName__r.Confidential__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Confidential KPIs should not go to supplier</inlineHelpText>
        <label>Confidential KPI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ContWatchListResetDate__c</fullName>
        <label>ContWatchList Reset Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supplier Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Consequence Managements</relationshipLabel>
        <relationshipName>Consequence_Managements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ContinuouslyAboveThreshold_Period__c</fullName>
        <defaultValue>6</defaultValue>
        <label>Continuously Above Threshold Period</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ContractTerminationActual__c</fullName>
        <description>Section - Phase out Status</description>
        <label>Contract Termination Actual</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ContractTerminationTarget__c</fullName>
        <description>Section - Phase out Plan</description>
        <label>Contract Termination Target</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contributor1__c</fullName>
        <label>Contributor</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contributor__c</fullName>
        <label>Contributor</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contributors__c</fullName>
        <label>Contributor(s)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CorrectiveActionInstructions__c</fullName>
        <formula>KPIName__r.CorrectiveActionInstructions__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Corrective Action Instructions</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrentStage__c</fullName>
        <label>StageDep</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Close</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancel</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CurrentURL__c</fullName>
        <formula>&apos;https://cs22.salesforce.com/&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CurrentURL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DataLogic__c</fullName>
        <label>Data Logic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Expected_Closure__c</fullName>
        <label>Date of Expected Closure</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Datefailurefirstobserved__c</fullName>
        <label>Date Issue First Observed?</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateofExecution__c</fullName>
        <formula>SPETracker__r.DateOfExecution__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date of Execution</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DaysOpen__c</fullName>
        <label>Days Open</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Open__c</fullName>
        <formula>IF(ISPICKVAL(TicketStatus__c, &apos;Open&apos;) , (TODAY () - DATEVALUE(CreatedDate)), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Open</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <formula>KPIName__r.Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DetailsDayAllowed__c</fullName>
        <formula>DetailsDueDate__c - DATEVALUE( CreatedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Day Allowed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DetailsDueDate__c</fullName>
        <defaultValue>TODAY()+15</defaultValue>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DevelopmentExpectation__c</fullName>
        <label>Development Expectation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Duplicate_Checker__c</fullName>
        <label>Duplicate Checker</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailNew__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>FacilityType__c</fullName>
        <label>Facility Type</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GrowingPeriodInterval__c</fullName>
        <label>Growing Period Interval</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>InitialKPIScore1__c</fullName>
        <label>Initial KPI Score1</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>InitialKPIScore__c</fullName>
        <label>Initial KPI Score</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>InitialKPIValue__c</fullName>
        <label>Initial KPI Value</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>InternalContainmentifany__c</fullName>
        <label>Internal Containment, if any?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IsAutoGenerate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is AutoGenerate ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KPIAbbreviation__c</fullName>
        <formula>KPIName__r.AbbreviatedName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>KPI Abbreviation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KPIDetails__c</fullName>
        <label>KPI Details</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>KPIName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>KPI Name</label>
        <referenceTo>SPE_KPIDefinition__c</referenceTo>
        <relationshipLabel>Consequence Managements</relationshipLabel>
        <relationshipName>Consequence_Managements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KPIScoreThreshold__c</fullName>
        <defaultValue>3</defaultValue>
        <label>KPI Score Threshold</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KPITarget__c</fullName>
        <label>KPI Target</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KPITitle__c</fullName>
        <encrypted>true</encrypted>
        <label>KPI Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LatestKPITrend__c</fullName>
        <label>Latest KPI Trend</label>
        <summarizedField>SPE_CMKPITrend__c.DateofExecution__c</summarizedField>
        <summaryForeignKey>SPE_CMKPITrend__c.ConsequenceManagement__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Lead_Auditor_Value__c</fullName>
        <label>Lead Auditor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Auditor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead Auditor</label>
        <referenceTo>SPE_KPIDefinition__c</referenceTo>
        <relationshipLabel>Consequence Management (Lead Auditor)</relationshipLabel>
        <relationshipName>Consequence_Management4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LogicAnnotation__c</fullName>
        <label>Logic Annotation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ManufactureAcceptsFault__c</fullName>
        <label>Supplier Accepts Fault ?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ManufacturerComments__c</fullName>
        <label>Supplier Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MarketUnit__c</fullName>
        <label>Market Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MasterCM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Master CM</label>
        <referenceTo>SPE_ConsequenceManagement__c</referenceTo>
        <relationshipLabel>Child Ticket</relationshipLabel>
        <relationshipName>Consequence_Management</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MissingDatalogic__c</fullName>
        <label>Missing Data logic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NC_Request__c</fullName>
        <label>NC Request</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NotificationSent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notification Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OpenDate__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Open Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Organization_Group__c</fullName>
        <inlineHelpText>Relevant org/group for this data</inlineHelpText>
        <label>Organization/Group</label>
        <picklist>
            <picklistValues>
                <fullName>Indirect Procurement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Procurement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Services Procurement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partnering Organization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile Broadband</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OwnerApproval__c</fullName>
        <label>Nokia Approve / Reject</label>
        <picklist>
            <picklistValues>
                <fullName>Approve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reject</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OwnerComments__c</fullName>
        <label>Nokia Response</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OwnerIsMfrInvolvedinSPECase__c</fullName>
        <label>Nokia : Is Mfr. Involved in SPE Case?</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>